# ecn_baxter_vs

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md  main.cpp  package.xml
include/ecn_baxter_vs/: baxter_arm.h
launch/: baxter.urdf  control.launch  manual.launch  sim.launch  vrep.launch
scene/: baxter.ttt  left_dummy.urdf  right_dummy.urdf
src/: baxter_arm.cpp  baxter_gui.ui  display  display.py
subject/: baxter_lab.tex
