<?xml version="1.0"?>
<package>
  <name>ecn_baxter_vs</name>
  <version>0.0.1</version>
  <description>The ecn_baxter_vs package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>urdf</run_depend>
<run_depend>cv_bridge</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>