<?xml version="1.0"?>
<package format="2">
  <name>ecn_baxter_vs</name>
  <version>0.0.1</version>
  <description>The ecn_baxter_vs package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>baxter_core_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>urdf</depend>
  <depend>image_transport</depend>
 <depend>ecn_common</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
